<resources>
    <string name="app_name">LoginExample</string>


    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="username_required">Username is required</string>
    <string name="password_required">Password is required</string>
    <string name="logo">Logo</string>
    <string name="forgot_password">Forgot Password?</string>
</resources>